bugfixes & testing improvements

--- a/server/rules.html
+++ b/server/rules.html
@@ -31,7 +31,7 @@
             <ol>
                 <li>Тесты должны быть написаны с использованием библиотеки <b>doctest</b></li>
                 <li>Файл с тестами должен лежать в папке с задачкой и иметь название <b>test.cpp</b> или <b>tests.cpp</b></li>
-                <li>Тесты должны собираться в файл с именем <b>test</b> или <b>test.exe</b> (или <b>tests</b> / <b>tests.exe</b>)</li>
+				<li>Тесты должны собираться в файл с именем, содержащим слово <b>test</b> в названии</li>
                 <li>Файл с тестами НЕ ДОЛЖЕН БЫТЬ ПУСТЫМ ИЛИ БЫТЬ ЗАГЛУШКОЙ
                     (Буду следить за их длинной автоматически и долгими холодными вечерами отсматривать их галзками. Потом будет бан)</li>
             </ol>
